# rust

./: rust-note.txt
02_guessing_game/: Cargo.toml
03_functions/: Cargo.toml
03_functions/src/: main.rs
03_varaibles/: Cargo.toml
05_ch3_ex/: Cargo.toml
06_ownership/src/: main.rs
07_references/: Cargo.toml
08_slice/: Cargo.toml
08_slice/src/: main.rs
09_structs/src/: main.rs
10_method/: Cargo.toml
10_method/src/: main.rs
11_enums/src/: main.rs
12_matches/: Cargo.toml
12_matches/src/: main.rs
13_restaurant/: Cargo.toml
13_restaurant/src/: lib.rs
14_use/src/: main.rs
15_restaurant_mod/: Cargo.toml
15_restaurant_mod/src/: front_of_house.rs  lib.rs  main.rs
15_restaurant_mod/src/front_of_house/: hosting.rs
16_vectors/: Cargo.toml
16_vectors/src/: main.rs
17_Strings/src/: main.rs
Strings/: Cargo.toml
Strings/src/: main.rs
_use/: Cargo.toml
_use/src/: main.rs
ch3_ex/src/: main.rs
control_flow/: Cargo.toml
control_flow/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hash_map/: Cargo.toml
hash_map/src/: main.rs
hello_cargo/: Cargo.toml
ownership/: Cargo.toml
references/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
variables/src/: main.rs
