[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Jinwoo An <jinwoo.gus.an@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.3.14" 
# rand crate is a 'library crate'!
# is shorthand for ^0.3.14 : any version that has public API compatible with ver 0.3.14
